Resume link added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	                <span class="number" data-number="7">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="https://github.com/Tuspatil/Tuspatil.github.io/raw/main/Tushar_Patil%20(1).pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="https://github.com/Tuspatil/Tuspatil.github.io/raw/main/Tushar_Patil.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
